Proper fix for units sidebar overlap. (#134)

--- a/client/themes/bracket-plus/scss/app.scss
+++ b/client/themes/bracket-plus/scss/app.scss
@@ -1298,7 +1298,7 @@
   top: $br-header-height;
   bottom: 0;
   left: $br-sideleft-width;
-  width: 320px;
+  width: 220px;
   overflow-y: auto;
   background-color: #fff;
   z-index: 100;
